Added minified versions of libraries. Stopped using deprecated function from library.

--- a/plant-uml-file-viewer.html
+++ b/plant-uml-file-viewer.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PlantUML Viewer</title>
     <script src="https://bitbucket.org/atlassian-connect/all.js"></script>
-    <script src="rawdeflate.js"></script>
-    <script src="sha1.js"></script>
+    <script src="rawdeflate-min.js"></script>
+    <script src="sha1-min.js"></script>
     <script src="plantumlutils.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133727319-1"></script>
     <script>
