More scalable and releasable

--- a/plant-uml-file-viewer.html
+++ b/plant-uml-file-viewer.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PlantUML Viewer</title>
     <script src="https://bitbucket.org/atlassian-connect/all.js"></script>
+    <script src="https://unpkg.com/unfetch/polyfill"></script>
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
     <script src="rawdeflate-min.js"></script>
     <script src="sha1-min.js"></script>
     <script src="plantumlutils.js"></script>
