Apparently they led me astray

--- a/index.html
+++ b/index.html
@@ -24,8 +24,5 @@
         ]
     },
     "scopes": ["repository"],
-    "contexts": ["account"],
-    "apiMigrations": {
-     "context-qsh": true
-  }
+    "contexts": ["account"]
 }
