Switched from GA.

--- a/data-security-and-privacy.html
+++ b/data-security-and-privacy.html
@@ -22,7 +22,7 @@
         <h2>Information Gathering and Usage</h2>
         During Bitbucket PlantUML Viewer installation, users grant access to the add-on to read repositories. The access is needed to read the content of a file in order to display it on the Bitbucket source view page. No cloning operations are executed.
         <br/><br/>
-        Bitbucket PlantUML Viewer uses Google Analytics that allows us to better understand our users and improve the services we offer. To learn about how Google Analytics collects and processes data please <a href="http://www.google.com/policies/privacy/partners/">read here</a>. For the information about what steps Google Analytics takes to help keep your data protected please <a href="https://support.google.com/analytics/answer/6004245?hl=en">read here</a>. The information gathered is non-personally identifiable.    
+        Bitbucket PlantUML Viewer uses local tracking to the developer that allows us to better understand our users and improve the services we offer. The information gathered is non-personally identifiable.    
         <br/><br/>
         <h2>Data Storage</h2>
         Bitbucket PlantUML Viewer uses third party vendor and hosting partner, Firebase Hosting, to provide the necessary hardware, software, networking, storage, and related technology required to run Bitbucket PlantUML Viewer. Although I own the code, databases, and all rights to the Bitbucket PlantUML Viewer platform, you retain all rights to your data.
