--- a/plant-uml-file-viewer.html
+++ b/plant-uml-file-viewer.html
@@ -10,17 +10,7 @@
     <script src="rawdeflate-min.js"></script>
     <script src="sha1-min.js"></script>
     <script src="plantumlutils.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133727319-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-133727319-1');
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    </script>
+    <script async defer data-website-id="5b731534-c2b3-49e1-876c-0600dc54d45d" src="https://tracking.scaledcode.com/umami.js"></script>
 </head>
 <body>
     <span id="diagrams"></span>
