--- a/data-security-and-privacy.html
+++ b/data-security-and-privacy.html
@@ -4,17 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bitbucket PlantUML Viewer Data Protection And Privacy</title>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133727319-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-133727319-1');
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    </script>
+    <script async defer data-website-id="5b731534-c2b3-49e1-876c-0600dc54d45d" src="https://tracking.scaledcode.com/umami.js"></script>
 </head>
 <body>
         <h1>Privacy Policy</h1>
@@ -22,7 +12,7 @@
         <h2>Information Gathering and Usage</h2>
         During Bitbucket PlantUML Viewer installation, users grant access to the add-on to read repositories. The access is needed to read the content of a file in order to display it on the Bitbucket source view page. No cloning operations are executed.
         <br/><br/>
-        Bitbucket PlantUML Viewer uses local tracking to the developer that allows us to better understand our users and improve the services we offer. The information gathered is non-personally identifiable.    
+        Bitbucket PlantUML Viewer uses local tracking to the developer that allows us to better understand our users and improve the services we offer. The information gathered is non-personally identifiable.
         <br/><br/>
         <h2>Data Storage</h2>
         Bitbucket PlantUML Viewer uses third party vendor and hosting partner, Firebase Hosting, to provide the necessary hardware, software, networking, storage, and related technology required to run Bitbucket PlantUML Viewer. Although I own the code, databases, and all rights to the Bitbucket PlantUML Viewer platform, you retain all rights to your data.
