--- a/data-security-and-privacy.html
+++ b/data-security-and-privacy.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Bitbucket PlantUML Viewer Data Protection And Privacy</title>
-    <script async defer data-website-id="5b731534-c2b3-49e1-876c-0600dc54d45d" src="https://t.scaledcode.com/umami.js"></script>
+    <script async src="https://tracking.scaledcode.com/script.js" data-website-id="5b731534-c2b3-49e1-876c-0600dc54d45d"></script>
 </head>
 <body>
         <h1>Privacy Policy</h1>
