--- a/plant-uml-file-viewer.html
+++ b/plant-uml-file-viewer.html
@@ -10,10 +10,13 @@
     <script src="rawdeflate-min.js"></script>
     <script src="sha1-min.js"></script>
     <script src="plantumlutils.js"></script>
-    <script async src="https://tracking.scaledcode.com/script.js" data-website-id="5b731534-c2b3-49e1-876c-0600dc54d45d"></script>
+    <script async src="https://tracking.scaledcode.com/script.js" data-website-id="5b731534-c2b3-49e1-876c-0600dc54d45d" data-auto-track="false"></script>
 </head>
 <body>
     <span id="diagrams"></span>
 </body>
 <script src="plant-uml-file-viewer.js"></script>
+<script>
+    sendPageView();
+</script>
 </html>
